--- a/taratra_hazavana_madagasikara_pejy.html
+++ b/taratra_hazavana_madagasikara_pejy.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Taratra Hazavana Madagasikara — Pejy Ofisialy</title>
-  <style>
+  <title>index.html</title>
+  <style>Rename to index.html
     body {
       font-family: Arial, sans-serif;
       margin: 0; padding: 0;
@@ -40,13 +40,13 @@
 <body>
   <header>
     <h1>Taratra Hazavana Madagasikara</h1>
-    <p><em>"Finoana tsy maintsy tafita — Faneva sy finoana mitarika fandresena"</em></p>
+    <p><em>"Finoana tsy maintsy tafita â€” Faneva sy finoana mitarika fandresena"</em></p>
   </header>
 
   <main>
     <h2>Mombamomba ny Tarika</h2>
     <p>Antoko mpihira evanjelika miorina ao <strong>Toamasina</strong>, Madagasikara.</p>
-    <p>Natsangan’i <strong>Randrianaivolo Lova</strong> tamin’ny taona 2017.</p>
+    <p>Natsanganâ€™i <strong>Randrianaivolo Lova</strong> taminâ€™ny taona 2017.</p>
     <p>Lohatenin-kira voalohany: <strong>"Finoana tsy maintsy tafita"</strong>.</p>
     
     <h2>Sary sy Sanganasa</h2>
@@ -60,7 +60,7 @@
   </main>
 
   <footer>
-    © 2025 Taratra Hazavana Madagasikara — Pejy Ofisialy
+    Â© 2025 Taratra Hazavana Madagasikara â€” Pejy Ofisialy
   </footer>
 </body>
 </html>
